MDEV-12604 Comparison of JSON_EXTRACT result differs with Mysql.

Comparison fixed to take the actual type of JSON value into
        account. Bug in escaping handling fixed.